--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -3,7 +3,7 @@
 </div>
 
 <div *ngIf="!loading">
-<ion-menu side="start">
+<ion-menu side="start" contentId="main">
   <ion-header>
     <ion-toolbar translucent>
       <ion-title>Menu</ion-title>
@@ -30,7 +30,7 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-<div class="ion-page" main>
+<div class="ion-page" id="main">
   
   <ion-header translucent>
     <ion-toolbar>
