--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -1,9 +1,6 @@
-<div *ngIf="loading" class="spinner">
-  <spinner></spinner>
-</div>
 
-<div *ngIf="!loading">
-<ion-menu side="start" contentId="main">
+
+<ion-menu side="start" contentId="main" *ngIf="!loading">
   <ion-header>
     <ion-toolbar translucent>
       <ion-title>Menu</ion-title>
@@ -19,9 +16,9 @@
         <ion-icon name="person" slot="start"></ion-icon>
         <ion-label>Profile</ion-label>
       </ion-item>
-      <ion-item>
+      <ion-item (click)="IrDatosBasicos()">
         <ion-icon name="chatbubbles" slot="start"></ion-icon>
-        <ion-label>Messages</ion-label>
+        <ion-label>Datos Basicos</ion-label>
       </ion-item>
       <ion-item (click)="Logout()">
         <ion-icon name="settings" slot="start"></ion-icon>
@@ -35,16 +32,19 @@
   <ion-header translucent>
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
+        <ion-menu-button *ngIf="!loading"></ion-menu-button>
       </ion-buttons>
       <ion-title>Mi Perfil</ion-title>
-      <ion-buttons slot="end">
+      <ion-buttons slot="end" *ngIf="!loading">
         <ion-icon [name]="ordenar? 'list' : 'list-box'" (click)="Ordenar()" style="font-size: 150%;"></ion-icon>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
+  <div *ngIf="loading" class="spinner">
+    <spinner></spinner>
+  </div>
 
-  <ion-content class="ion-padding"> 
+  <ion-content class="ion-padding" *ngIf="!loading" [scrollEvents]="true" (ionScroll)="Scroll($event)"> 
       
     <div class="contenedorAvatar" >
       <ion-avatar> 
@@ -222,5 +222,4 @@
     </ion-fab>
 
   </ion-content>
-</div>
 </div>
