Tarjeta de usuarios

--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -48,7 +48,7 @@
       
     <div class="contenedorAvatar" >
       <ion-avatar> 
-        <img [src]="avatar" >
+        <ion-img [src]="avatar"></ion-img>
       </ion-avatar>
     </div>
 
