--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,9 +4,44 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content >
   <ion-button (click)="Logout()">
     Salir
   </ion-button>
+  <ion-grid style="padding-left: 0%; padding-right: 0%;">
+      <ion-row style="padding-left: 5px; padding-right: 5px;" > 
 
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2"  style=" padding: 5px;">
+          <card></card>
+        </ion-col>
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
+          <card></card>
+        </ion-col >
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
+          <card></card>
+        </ion-col>
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
+          <card></card>
+        </ion-col>
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
+            <card ></card>
+        </ion-col>
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2"  style=" padding: 5px;">
+          <card></card>
+        </ion-col>
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4"  sizeXl="2" style=" padding: 5px;">
+          <card></card>
+        </ion-col >
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
+          <card></card>
+        </ion-col>
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
+          <card></card>
+        </ion-col>
+        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
+            <card ></card>
+        </ion-col>
+      </ion-row>
+  </ion-grid>
+  
 </ion-content>
