--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -14,7 +14,7 @@
     <div class="contenedorAvatar" >
       <ion-avatar (click)="SeleccionarImagen()" style="height: 100px;
       width: 100px;"> 
-        <img *ngIf="!loadingAvatar" [src]="user.avatarUrl ? user.avatarUrl : avatar.filePath" >
+        <ion-img  *ngIf="!loadingAvatar" alt="Avatar" (ionError)="ErrorImagen()" [src]="user.avatarUrl ? user.avatarUrl : avatar.filePath" ></ion-img>
         <ion-spinner *ngIf="loadingAvatar" name="crescent" style="width: 100%; height: 100%;"></ion-spinner>
       </ion-avatar>
     </div>
