--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,43 +5,52 @@
 </ion-header>
 
 <ion-content >
-  <ion-button (click)="Logout()">
-    Salir
-  </ion-button>
-  <ion-grid style="padding-left: 0%; padding-right: 0%;">
-      <ion-row style="padding-left: 5px; padding-right: 5px;" > 
-
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2"  style=" padding: 5px;">
-          <card></card>
-        </ion-col>
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
-          <card></card>
-        </ion-col >
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
-          <card></card>
-        </ion-col>
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
-          <card></card>
-        </ion-col>
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
-            <card ></card>
-        </ion-col>
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2"  style=" padding: 5px;">
-          <card></card>
-        </ion-col>
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4"  sizeXl="2" style=" padding: 5px;">
-          <card></card>
-        </ion-col >
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
-          <card></card>
-        </ion-col>
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
-          <card></card>
-        </ion-col>
-        <ion-col sizeXs="6" sizeSm="4" sizeMd="3" sizeLg="2.4" sizeXl="2" style=" padding: 5px;">
-            <card ></card>
-        </ion-col>
-      </ion-row>
-  </ion-grid>
+  <ion-card>
+    <ion-input 
+    #status
+    [maxlength]="maxStatus"
+    [value]="user ? user.status : ''"
+    style="text-align: start;" 
+    [placeholder]="placeholderStatus" 
+    (ionBlur)="ChangeStatus($event)"></ion-input>
+  </ion-card>
+  <ion-refresher slot="fixed" (ionRefresh)="GPS($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
   
+  <ion-infinite-scroll threshold="100px"  (ionInfinite)="LoadUsers($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+      <ion-grid *ngIf="users.length !== 0" style="padding-left: 0%; padding-right: 0%; width: 100%;">
+        <ion-row style="padding-left: 5px; padding-right: 5px;" > 
+          <ion-col 
+          sizeXs="6" 
+          sizeSm="4" 
+          sizeMd="3" 
+          sizeLg="2.4" 
+          sizeXl="2"  
+          style=" padding: 5px;"
+          *ngFor="let user of users">
+            <card [user]="user"></card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed"  >
+    <ion-fab-button size="small">
+        <ion-icon name="arrow-dropup"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button (click)="ChangeProfiles(false)" [ngClass]="{'activo': profesional, 'inactivo' : !profesional}"><ion-icon name="logo-youtube"></ion-icon></ion-fab-button>
+      <ion-fab-button (click)="ChangeProfiles(true)" [ngClass]="{'activo': personal, 'inactivo' : !personal}"><ion-icon name="logo-vimeo"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+ 
 </ion-content>
