--- a/src/app/pages/tabs/tabs.component.html
+++ b/src/app/pages/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs [ngClass]="{'ocultar': ocultar}">
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="config-profile">
       <ion-icon name="person"></ion-icon>
