--- a/src/app/pages/home/card/card.component.scss
+++ b/src/app/pages/home/card/card.component.scss
@@ -1,20 +1,13 @@
-.contenedor{
-  position: relative;
-  display: block;
-  text-align: center;
-}
-
-.texto-encima{
-  position: absolute;
-  top: 0px;
-}
-.centrado{
-  position: absolute;
-  top: 85%;
-  left: 3%;
-  // transform: translate(0%, 0%);
-}
 .imagen {
   height: 220px;
+  max-width: 170px;
+}
+.text-name {
+  font-size: 18px; 
+  text-transform: capitalize;
+}
+
+.card-list {
+  margin: 0px; 
   max-width: 170px;
 }
