--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -4,3 +4,36 @@
 .inactivo {
   opacity: 0.5;
 }
+
+.vacio {
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  padding-top: 10px;
+  > fa-icon {
+      font-size: 59px;
+      width: 100%;
+      margin-bottom: 35px;
+      color: #c7c7c7;
+  }
+  > p {
+      font-size: 20px;
+      color: #c7c7c7;
+  }
+
+}
+
+.grid-home {
+  padding-left: 0%; 
+  padding-right: 0%; 
+  width: 100%;
+}
+
+.row-home {
+  padding-left: 5px; 
+  padding-right: 5px;
+}
+
+.col-home {
+  padding: 5px;
+}
