--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -1,30 +1,45 @@
-
 <ion-header>
   <ion-toolbar>
-    <ion-title>Perfil</ion-title>
+    <ion-title>
+      Perfil
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<div *ngIf="loading" class="spinner">
+<div 
+  *ngIf="loading" 
+  class="spinner">
   <spinner></spinner>
 </div>
 
-<ion-content *ngIf="!loading" class="ion-padding">
-  <form [formGroup]="form"  (ngSubmit)="onSubmit()">
+<ion-content 
+  *ngIf="!loading" 
+  class="ion-padding">
+  <form 
+    [formGroup]="form"
+    (ngSubmit)="onSubmit()">
     <div class="contenedorAvatar" >
-      <ion-avatar (click)="SeleccionarImagen()" style="height: 100px;
-      width: 100px;"> 
-        <ion-img  *ngIf="!loadingAvatar" alt="Avatar" (ionError)="ErrorImagen()" [src]="user.avatarUrl ? user.avatarUrl : avatar.filePath" ></ion-img>
-        <ion-spinner *ngIf="loadingAvatar" name="crescent" style="width: 100%; height: 100%;"></ion-spinner>
+      <ion-avatar (click)="SeleccionarImagen()" class="avatar-profile"> 
+        <ion-img  
+          *ngIf="!loadingAvatar" 
+          alt="Avatar" 
+          (ionError)="ErrorImagen()" 
+          [src]="user.avatarUrl ? user.avatarUrl : avatar.filePath" >
+      </ion-img>
+        <ion-spinner 
+          *ngIf="loadingAvatar" 
+          name="crescent" 
+          class="avatar-profile">
+        </ion-spinner>
       </ion-avatar>
     </div>
     <ion-list>
       <ion-item >
           <fa-icon 
-          [icon]="['fas', 'user']"
-          class="icono"
-          style="align-self:center;"
-          slot="start" ></fa-icon>
+            [icon]="['fas', 'user']"
+            class="icono icon-center"
+            slot="start" >
+          </fa-icon>
         <ion-label position="floating" >
           firstName
         </ion-label>
@@ -32,61 +47,54 @@
           
           formControlName="firstName"
         >
-
         </ion-input>
       </ion-item>
       <ion-item>
           <fa-icon 
-          [icon]="['fas', 'user']"
-          class="icono"
-          style="align-self:center;"
-          slot="start" ></fa-icon>
+            [icon]="['fas', 'user']"
+            class="icono icon-center"
+            slot="start" >
+          </fa-icon>
         <ion-label position="floating" >
           lastName
         </ion-label>
         <ion-input 
-          
           formControlName="lastName"
         >
-
         </ion-input>
       </ion-item>
       <ion-item>
           <fa-icon 
-          [icon]="['fas', 'envelope']"
-          class="icono"
-          style="align-self:center;"
-          slot="start" ></fa-icon>
+            [icon]="['fas', 'envelope']"
+            class="icono icon-center"
+            slot="start" >
+          </fa-icon>
         <ion-label position="floating" >
           email
         </ion-label>
         <ion-input 
-          
           formControlName="email"
           type="email"
         >
-
         </ion-input>
       </ion-item>
-      <div style="width: 100%; display: flex;">
-          
-      <ion-item style="flex: 0 0 35%; margin-right: 5%;">
+      <div class="phone">
+        <ion-item class="phoneCode">
           <fa-icon 
-          [icon]="['fas', 'mobile-alt']"
-          class="icono"
-          style="align-self:center;"
-          slot="start" ></fa-icon>
-        <ion-label position="floating" >
-          Code
-        </ion-label>
-        
-        <ion-input 
-          type="number"
-          formControlName="phoneCode"
-        >
-        </ion-input>
-      </ion-item>
-      <ion-item style="flex: 0 0 60%;">
+            [icon]="['fas', 'mobile-alt']"
+            class="icono icon-center"
+            slot="start" >
+          </fa-icon>
+          <ion-label position="floating" >
+            Code
+          </ion-label>
+          <ion-input 
+            type="number"
+            formControlName="phoneCode"
+          >
+          </ion-input>
+        </ion-item>
+        <ion-item class="phoneNumber">
           <ion-label position="floating" >
             Phone Number
           </ion-label>
@@ -96,14 +104,13 @@
           >
           </ion-input>
         </ion-item>
-    </div>
-      
+      </div>
       <ion-item>
-          <fa-icon 
+        <fa-icon 
           [icon]="['fas', 'calendar-alt']"
-          class="icono"
-          style="align-self:center;"
-          slot="start" ></fa-icon>
+          class="icono icon-center"
+          slot="start" >
+        </fa-icon>
         <ion-label position="floating" >
           birthday
         </ion-label>
@@ -117,11 +124,10 @@
         ></ion-datetime>
       </ion-item>
       <ion-item>
-          <fa-icon 
-          [icon]="['fas', 'genderless']"
-          class="icono"
-          style="align-self:center;"
-          slot="start" ></fa-icon>
+        <fa-icon 
+        [icon]="['fas', 'genderless']"
+        class="icono icon-center"
+        slot="start" ></fa-icon>
         <ion-label position="floating" >
           gender
         </ion-label>
@@ -131,22 +137,13 @@
           cancel-text="Cancelar" 
           placeholder="Seleccione un sexo"
           formControlName="gender">
-          <ion-select-option value="Mujer">
-            Mujer
-          </ion-select-option>
-          <ion-select-option value="Hombre">
-            Hombre
-          </ion-select-option>
-          <ion-select-option value="Otro">
-            Otro
-          </ion-select-option>
-          <ion-select-option value="Prefiero no decirlo">
-            Prefiero no decirlo
+          <ion-select-option *ngFor="let gender of genders" [value]="gender">
+            {{gender}}
           </ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-toggle color="primary" formControlName="autosave" style="padding-left: 0px !important;"></ion-toggle>
+        <ion-toggle color="primary" formControlName="autosave" class="toggle-profle"></ion-toggle>
         <ion-label  >
             Autoguardado de contactos
           </ion-label>
