--- a/src/app/pages/home/card/card.component.scss
+++ b/src/app/pages/home/card/card.component.scss
@@ -1,7 +1,3 @@
-.imagen {
-  height: 220px;
-  max-width: 170px;
-}
 .text-name {
   font-size: 18px; 
   text-transform: capitalize;
@@ -9,5 +5,10 @@
 
 .card-list {
   margin: 0px; 
+  max-width: 170px;
+}
+
+.dimension {
+  height: 220px;
   max-width: 170px;
 }
