--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -53,7 +53,7 @@
   </ion-infinite-scroll>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed"  >
     <ion-fab-button size="small">
-        <ion-icon name="arrow-dropup"></ion-icon>
+        <ion-icon name="person"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button (click)="ChangeProfiles(false)" [ngClass]="{'activo': profesional, 'inactivo' : !profesional}"><ion-icon name="logo-youtube"></ion-icon></ion-fab-button>
