--- a/src/app/pages/publico/publico.page.html
+++ b/src/app/pages/publico/publico.page.html
@@ -1,25 +1,53 @@
 <ion-content >
-  <div (swipe)="Datos($event)" class="contenedor-card total">
-    <div class="status-card">
-      <p
-        class="text-card text-status text-small">
-        {{userWink.status ? userWink.status : 'Disponible'}}
-      </p>
-    </div>
-    <ion-img
-      class="total"
-      [src]="userWink.avatarUrl"
-    >
+  <ion-fab vertical="top" horizontal="start" slot="fixed"  class="top">
+  <ion-header class="opt-top transparent">
+      <ion-toolbar class="transparent">
+        <fa-icon slot="start" [icon]="['fas', 'arrow-left']" class="icono-white sombra" [routerLink]="[urlHome]"></fa-icon>
+        <div class="end status" slot="end">
+          <ion-label
+            class="text-card text-status text-small">
+            {{userWink.status ? userWink.status : 'Disponible'}}
+          </ion-label>
+        </div>
+      </ion-toolbar>
+    </ion-header>
+  </ion-fab>
+  <div class="contenedor-card total">
+    
+    <ion-img 
+      class="public-img"
+      [src]="userWink.avatarUrl">
     </ion-img>
-    <p class="name-card text-card text-name" 
-      >
-      {{userWink ? userWink.firstName + ' ' +  userWink.lastName : 'John Doe'}}
-    </p>
-    <p class="distance-card text-card text-small"
-      >
-      {{userWink ? userWink.distance : ''}}
-    </p>
-    <fa-icon [icon]="['fas', 'angle-double-up']" class="icono arrow-up"></fa-icon>
-    <fa-icon [icon]="['fas', 'arrow-left']" class="icono arrow-left" [routerLink]="[urlHome]"></fa-icon>
+    <div class="text-bottom">
+      <ion-label  class="public-name text-card" >
+          {{userWink ? userWink.firstName + ' ' +  userWink.lastName : 'John Doe'}}
+      </ion-label>
+      <ion-label class="text-card text-small">
+          {{userWink ? userWink.distance : ''}}
+      </ion-label>
+    </div>    
+    <ion-fab *ngIf="load" class="button-wink end">
+      <div *ngIf="wink" class="end">
+          <ion-fab-button *ngIf="!send && !wink.approved || wink.approved" size="small" color="light">
+              <ion-icon name="document"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button *ngIf="!send && !wink.approved" (click)="Acept()" size="small" color="success">
+              <ion-icon name="checkmark"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button *ngIf="!send && !wink.approved" (click)="Decline()" size="small" color="danger">
+              <ion-icon name="close"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button *ngIf="send && !wink.approved" size="small" color="dark">
+              <ion-icon name="happy"></ion-icon>
+          </ion-fab-button>
+      </div>
+      <ion-fab-button *ngIf="!wink" (click)="Send()"  size="small" color="light">
+          <ion-icon name="sad"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   </div>
+  <ion-list>
+    <item-list *ngFor="let item of publicItems"
+      [item]="item"></item-list>
+    </ion-list>
 </ion-content>
