--- a/src/app/pages/publico/publico.page.scss
+++ b/src/app/pages/publico/publico.page.scss
@@ -10,17 +10,50 @@
   left: 2%;
 }
 
-.distance-card{
-  position: absolute;
-  top: 90%;
-  left: 3%;
+.status{
+  padding-right: 4%;
+  width: 80%;
 }
 
-.text-name {
+.public-name{
   font-size: 25px; 
   text-transform: capitalize;
 }
 
+.text-bottom{
+  position: absolute;
+  top: 84%;
+  left: 3%;
+  display: grid;
+}
+
+.public-img {
+  width: 100%;
+  height: 84%;
+  object-fit: cover;
+}
+
 .text-small {
   font-size: 15px;
+}
+
+.opt-top {
+  display: flex; 
+  justify-content: flex-end; 
+  width: 100%;
+  background-color: rgba(0,0,0,0.1);
+}
+
+.button-wink {
+  position: absolute;
+  top: 79.5%;
+  left: 53%;
+  width: 46%;
+}
+
+.top {
+  height: auto;
+  width: 100%;
+  top: 0px;
+  left: 0px;
 }
