Actualizacion sevicio de configuracion de perfil

--- a/src/app/pages/publico/x.html
+++ b/src/app/pages/publico/x.html
@@ -1,25 +1,1 @@
-<ion-content >
-  <div (swipe)="Datos($event)" class="contenedor-card total">
-    <div class="status-card">
-      <p
-        class="text-card text-status text-small">
-        {{userWink.status ? userWink.status : 'Disponible'}}
-      </p>
-    </div>
-    <ion-img
-      class="total"
-      [src]="userWink.avatarUrl"
-    >
-    </ion-img>
-    <p class="name-card text-card text-name" 
-      >
-      {{userWink ? userWink.firstName + ' ' +  userWink.lastName : 'John Doe'}}
-    </p>
-    <p class="distance-card text-card text-small"
-      >
-      {{userWink ? userWink.distance : ''}}
-    </p>
-    <fa-icon [icon]="['fas', 'angle-double-up']" class="icono arrow-up"></fa-icon>
-    <fa-icon [icon]="['fas', 'arrow-left']" class="icono arrow-left" [routerLink]="[urlHome]"></fa-icon>
-  </div>
-</ion-content>
+class="item-has-value item-interactive item-input item-label-floating">
