--- a/src/app/pages/publico/item-list/item-list.component.html
+++ b/src/app/pages/publico/item-list/item-list.component.html
@@ -1,4 +1,4 @@
-<ion-item *ngIf="item && item.value !== ''">
+<ion-item *ngIf="item && item.value !== ''" class="item-has-value item-interactive item-input item-label-floating">
   <!--Icono del item-->
   <fa-icon 
   *ngIf="item"
@@ -13,9 +13,31 @@
   *ngIf="item">
     {{itemType? itemType.description : ''}}
   </ion-label>
+  
+  <mat-chip-list
+    *ngIf="itemType && itemType.index === 8" 
+    style="margin-top: 8px; flex-wrap: nowrap; width: 100%; margin-bottom: 5px;">
+    <ion-chip outline color="primary"
+    *ngFor="let chip of chips">
+    {{chip}}
+    </ion-chip>
+    
+  </mat-chip-list>
+
+  
+  
+  
 
   <ion-input 
+    *ngIf="itemType &&  itemType.index !== 8 && itemType.index !== -1"
     style="margin-left: 2%;" 
-    [value]="item? item.value : ''"></ion-input>
+    [value]="item? item.value : ''" readonly>
+  </ion-input>
+  <ion-textarea
+    *ngIf="itemType &&  itemType.index === -1"
+    style="margin-left: 2%;" 
+    [value]="item? item.value : ''" readonly>
+
+  </ion-textarea>
 
 </ion-item>
