PErfil publico, item-list

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,6 +5,15 @@
 </ion-header>
 
 <ion-content >
+  <ion-button (click)="OpenLink(0)">
+    Tel
+  </ion-button>
+  <ion-button (click)="OpenLink(1)">
+    Mail
+  </ion-button>
+  <ion-button (click)="OpenLink(2)">
+    Link
+  </ion-button>
   <ion-card>
     <ion-input 
     #status
