--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -1,4 +1,4 @@
-<ion-menu side="start" contentId="main" *ngIf="!loading">
+<ion-menu side="start" contentId="main" >
   <ion-header>
     <ion-toolbar translucent>
       <ion-title>Menu</ion-title>
@@ -30,7 +30,7 @@
   <ion-header translucent>
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-menu-button *ngIf="!loading"></ion-menu-button>
+        <ion-menu-button ></ion-menu-button>
       </ion-buttons>
       <ion-title>Mi Perfil</ion-title>
       <ion-buttons slot="end" *ngIf="!loading">
