--- a/src/app/pages/config-perfil/item-perfil/item-perfil.component.scss
+++ b/src/app/pages/config-perfil/item-perfil/item-perfil.component.scss
@@ -2,3 +2,26 @@
 .item-selector {
   height: 49px;
 }
+.item-perfil {
+  padding: 0px; 
+  display: flex; 
+  align-items: flex-start; 
+  margin-bottom: 1%;
+}
+
+.contenedor-doble {
+  display: flex; 
+  flex-direction: column; 
+  width:  100%;
+}
+
+.select-type {
+  min-width: 100% !important; 
+  padding-left: 16px; 
+  min-height: 56px; 
+}
+
+.icon-del {
+  margin-inline-start: 1px !important;
+  align-self:center
+}
