--- a/src/app/pages/tabs/tabs.component.html
+++ b/src/app/pages/tabs/tabs.component.html
@@ -1,16 +1,16 @@
 <ion-tabs [ngClass]="{'ocultar': ocultar}">
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button [tab]="profiles">
+  <ion-tab-bar slot="bottom" >
+    <ion-tab-button [tab]="profiles" >
       <ion-icon name="person"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button [tab]="home" >
-      <ion-icon name="home"></ion-icon>
+      <ion-icon name="home" ></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button [tab]="winks">
-      <ion-icon name="happy"></ion-icon>
-      <ion-badge>6</ion-badge>
+    <ion-tab-button [tab]="winks" >
+      <ion-icon name="happy" ></ion-icon>
+      <ion-badge color="medium">6</ion-badge>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
