--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -6,20 +6,12 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item>
-        <ion-icon name="home" slot="start"></ion-icon>
-        <ion-label>Home</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="person" slot="start"></ion-icon>
-        <ion-label>Profile</ion-label>
-      </ion-item>
       <ion-item (click)="IrDatosBasicos()">
-        <ion-icon name="chatbubbles" slot="start"></ion-icon>
+        <ion-icon name="person" slot="start"></ion-icon>
         <ion-label>Datos Basicos</ion-label>
       </ion-item>
       <ion-item (click)="Logout()">
-        <ion-icon name="settings" slot="start"></ion-icon>
+        <ion-icon name="exit" slot="start"></ion-icon>
         <ion-label>Salir</ion-label>
       </ion-item>
     </ion-list>
@@ -33,9 +25,13 @@
         <ion-menu-button ></ion-menu-button>
       </ion-buttons>
       <ion-title>Mi Perfil</ion-title>
-      <ion-buttons slot="end" *ngIf="!loading">
-        <ion-icon [name]="ordenar? 'list' : 'list-box'" (click)="Ordenar()" class="icon-order"></ion-icon>
-      </ion-buttons>
+      <fa-icon 
+        slot="end" *ngIf="!loading"
+        [icon]="[ordenar ? 'far' : 'fas',  'list-alt']"
+        class="icon-bar color-medium"
+        (click)="Ordenar()"></fa-icon>
+       
+ 
     </ion-toolbar>
   </ion-header>
   <div *ngIf="loading" class="spinner">
@@ -45,17 +41,15 @@
   <ion-content class="ion-padding" *ngIf="!loading" [scrollEvents]="true" (ionScroll)="Scroll($event)"> 
       
     <div class="contenedorAvatar" >
-      <ion-avatar> 
-        <ion-img [src]="avatar"></ion-img>
+      <ion-avatar class="avatar-profile"> 
+        <ion-img [src]="user ? user.avatarUrl : avatar"></ion-img>
       </ion-avatar>
     </div>
 
     <div class="contenedor" >
-      <ion-item class="item-name">
-        <ion-label class="label-name">
-            {{nombre}}
-        </ion-label>
-      </ion-item>
+      <ion-title class="title-name">
+        {{user ? user.firstName + ' ' + user.lastName : 'John Doe'}}
+      </ion-title>
     </div>
     
     <form [formGroup]="grupoForm"  (ngSubmit)="onSubmit()">
